# world_model_eval

./: .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  README.md  SCOPE.md  pyproject.toml
diagnostics/: __init__.py  cluster.py  features.py  figure.py  fixtures.py  report.py  schema.py
results/: report.md
runner/: __init__.py  record.py  run_eval.py  run_octo_sweep.py
tests/: test_pipeline.py
